fix: deploy